// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KogitoEmptyState component tests Info test 1`] = `
<KogitoEmptyState
  body="This process has no related sub processes"
  ouiaId="empty-state-ouia-id"
  title="No child process instances"
  type={3}
>
  <Bullseye
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-id="empty-state-ouia-id"
      data-ouia-component-type="kogito-empty-state"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="full"
      >
        <div
          className="pf-c-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              color="var(--pf-global--info-color--100)"
              icon={[Function]}
            >
              <InfoCircleIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="var(--pf-global--info-color--100)"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden="true"
                  aria-labelledby={null}
                  className="pf-c-empty-state__icon"
                  fill="var(--pf-global--info-color--100)"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </InfoCircleIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h5"
              size="lg"
            >
              <h5
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-3"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                No child process instances
              </h5>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                This process has no related sub processes
              </div>
            </EmptyStateBody>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</KogitoEmptyState>
`;

exports[`KogitoEmptyState component tests Refresh test 1`] = `
<KogitoEmptyState
  body="This process has no related sub processes"
  onClick={[MockFunction]}
  ouiaId="empty-state-ouia-id"
  title="No child process instances"
  type={1}
>
  <Bullseye
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-id="empty-state-ouia-id"
      data-ouia-component-type="kogito-empty-state"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="full"
      >
        <div
          className="pf-c-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              color="var(--pf-global--warning-color--100)"
              icon={[Function]}
            >
              <ExclamationTriangleIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="var(--pf-global--warning-color--100)"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden="true"
                  aria-labelledby={null}
                  className="pf-c-empty-state__icon"
                  fill="var(--pf-global--warning-color--100)"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </ExclamationTriangleIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h5"
              size="lg"
            >
              <h5
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-4"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                No child process instances
              </h5>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                This process has no related sub processes
              </div>
            </EmptyStateBody>
            <Button
              onClick={[MockFunction]}
              variant="primary"
            >
              <ButtonBase
                innerRef={null}
                onClick={[MockFunction]}
                variant="primary"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-primary"
                  data-ouia-component-id="OUIA-Generated-Button-primary-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  onClick={[MockFunction]}
                  role={null}
                  type="button"
                >
                  Refresh
                </button>
              </ButtonBase>
            </Button>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</KogitoEmptyState>
`;

exports[`KogitoEmptyState component tests Reset test 1`] = `
<KogitoEmptyState
  body="This process has no related sub processes"
  onClick={[MockFunction]}
  ouiaId="empty-state-ouia-id"
  title="No child process instances"
  type={2}
>
  <Bullseye
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-id="empty-state-ouia-id"
      data-ouia-component-type="kogito-empty-state"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="full"
      >
        <div
          className="pf-c-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              color="var(--pf-global--warning-color--100)"
              icon={[Function]}
            >
              <ExclamationTriangleIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="var(--pf-global--warning-color--100)"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden="true"
                  aria-labelledby={null}
                  className="pf-c-empty-state__icon"
                  fill="var(--pf-global--warning-color--100)"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </ExclamationTriangleIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h5"
              size="lg"
            >
              <h5
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-2"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                No child process instances
              </h5>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                This process has no related sub processes
              </div>
            </EmptyStateBody>
            <Button
              onClick={[MockFunction]}
              variant="link"
            >
              <ButtonBase
                innerRef={null}
                onClick={[MockFunction]}
                variant="link"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  onClick={[MockFunction]}
                  role={null}
                  type="button"
                >
                  Reset to default
                </button>
              </ButtonBase>
            </Button>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</KogitoEmptyState>
`;

exports[`KogitoEmptyState component tests Search test 1`] = `
<KogitoEmptyState
  body="This process has no related sub processes"
  ouiaId="empty-state-ouia-id"
  title="No child process instances"
  type={0}
>
  <Bullseye
    data-ouia-component-id="empty-state-ouia-id"
    data-ouia-component-type="kogito-empty-state"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-id="empty-state-ouia-id"
      data-ouia-component-type="kogito-empty-state"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="full"
      >
        <div
          className="pf-c-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              icon={[Function]}
            >
              <SearchIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden="true"
                  aria-labelledby={null}
                  className="pf-c-empty-state__icon"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  />
                </svg>
              </SearchIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h5"
              size="lg"
            >
              <h5
                className="pf-c-title pf-m-lg"
                data-ouia-component-id="OUIA-Generated-Title-1"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                No child process instances
              </h5>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                This process has no related sub processes
              </div>
            </EmptyStateBody>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</KogitoEmptyState>
`;
